--- a/cuadernos-python/05_Python_Diccionarios.ipynb
+++ b/cuadernos-python/05_Python_Diccionarios.ipynb
@@ -23,9 +23,7 @@
         "\n",
         "**Autor:** William Gomez\n",
         "\n",
-        "**Descripción:** Podrías resumir toda esa parte de “¿Qué son los diccionarios?” en un par de párrafos así, más natural y directo:\n",
-        "\n",
-        "---\n",
+        "**Descripción:**\n",
         "\n",
         "En Python, un diccionario es una estructura que guarda pares **llave–valor**, donde cada llave es única y está asociada a un dato específico. A diferencia de las listas, que usan índices numéricos, en los diccionarios las llaves pueden ser cadenas, números o tuplas (siempre que sean inmutables). Los valores, en cambio, pueden ser de cualquier tipo. La sintaxis se basa en llaves `{}` y cada par se separa con comas: `\"llave\": valor`. Esto permite acceder a los datos de forma directa usando la llave, sin importar su posición.\n",
         "\n",
