added some comments to the images

--- a/No Supervisado/LabNoSupervisado00_WilliamGomezRoa.ipynb
+++ b/No Supervisado/LabNoSupervisado00_WilliamGomezRoa.ipynb
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -605,6 +605,16 @@
     "plt.ylabel('Within Set Sum of Squared Errors (WSSSE)')\n",
     "plt.title('Elbow Method for Optimal K')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos observar el ***gráfico del codo***, un método utilizado para determinar el número óptimo de grupos (*k*) en un proceso de agrupamiento. Este método evalúa una métrica de **inercia** o **suma de errores cuadráticos dentro de los clusters** (*WSS*), que mide la compactación de los grupos formados.  \n",
+    "\n",
+    "En este caso, el gráfico sugiere que el valor ideal sería aproximadamente **k = 6**. Sin embargo, sabemos de antemano que el conjunto de datos **Iris** contiene únicamente **tres categorías reales**, correspondientes a las tres especies de flores incluidas en el dataset.\n",
+    "\n"
    ]
   },
   {
@@ -713,6 +723,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El gráfico muestra el resultado del agrupamiento aplicado al dataset **Iris**, usando las variables **sepal_length** y **sepal_width** como ejes.  \n",
+    "Cada punto corresponde a una flor, y el color indica el grupo asignado por el algoritmo **K-Means** en **PySpark MLlib**.  \n",
+    "\n",
+    "Se observa que los datos forman regiones diferenciadas, lo que refleja la capacidad del modelo para separar las especies según la forma y proporción de los sépalos, aunque algunos grupos se solapan parcialmente.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -786,6 +806,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En esta visualización se representan los resultados del agrupamiento sobre las variables **petal_length** y **petal_width** del dataset **Iris**.  \n",
+    "Cada punto corresponde a una flor, coloreada según el *cluster* asignado por el algoritmo **K-Means**.  \n",
+    "\n",
+    "La separación entre los grupos es más clara que en el caso de los sépalos, lo que indica que las dimensiones de los pétalos son más representativas para distinguir las especies dentro del conjunto de datos.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
@@ -829,6 +859,16 @@
     "plt.ylabel(\"sepal_width\")\n",
     "plt.title(\"K-means Clustering - Iris\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El gráfico muestra la distribución de los datos del conjunto **Iris** en función de las variables **sepal_length** y **sepal_width**, tras aplicar el algoritmo **K-Means** con *k=3*.  \n",
+    "Cada punto representa una observación, y su color corresponde al grupo al que fue asignada.  \n",
+    "\n",
+    "Se aprecia que la separación entre los *clusters* no es tan nítida como en el caso de los pétalos, lo que sugiere que las dimensiones de los sépalos ofrecen menor capacidad discriminante entre las especies de flores.\n"
    ]
   },
   {
@@ -1199,7 +1239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Análisis\n",
+    "### **Análisis**\n",
     "\n",
     "Al observar los gráficos y los resultados del método del codo, se nota que la estructura del dataset Iris se presta a distintas interpretaciones según el valor de k. Con k=3, los clusters capturan bien las tres especies principales y la dispersión interna de cada grupo es aceptable, aunque algunos puntos más alejados sugieren que podrían existir subvariantes dentro de las especies.\n",
     "\n",
@@ -1212,7 +1252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
+    "### **Conclusiones**\n",
     "\n",
     "- La elección de k=3 es adecuada porque refleja la estructura real del dataset Iris, identificando correctamente las tres especies principales y manteniendo una separación clara entre los clusters.\n",
     "- Valores de k mayores producen clusters artificiales que fragmentan los grupos naturales, reduciendo la interpretación biológica y dificultando el análisis de los datos."
